--- a/app/views/backend/aggregators/index.html.haml
+++ b/app/views/backend/aggregators/index.html.haml
@@ -1,5 +1,6 @@
+- categories = Nomen::DocumentCategories.to_a.select{|category| Aggeratio.of_category(category).size > 0}
 = beehive do |b|
-  - for category in Nomen::DocumentCategories.to_a
+  -# for category in Nomen::DocumentCategories.to_a
     - aggregators = Aggeratio.of_category(category)
     - if aggregators.size > 0
       - b.cell Nomen::DocumentCategories[category].human_name do
@@ -7,3 +8,16 @@
           - for aggregator in aggregators
             %li
               %h3= link_to(aggregator.human_name, {:action => :show, :id => aggregator.id})
+
+  - while categories.any?
+    - b.hbox do
+      - for category in categories.slice!(0, 3)
+        - b.cell Nomen::DocumentCategories[category].human_name do
+          - for aggregator in Aggeratio.of_category(category)
+            = link_to({action: :show, id: aggregator.id}, :class => "btn btn-big btn-#{aggregator.id}", title: aggregator.human_name) do
+              %i
+              = aggregator.human_name
+          -# %ul.desc-list
+            - for aggregator in Aggeratio.of_category(category)
+              %li
+                %h3= link_to(aggregator.human_name, {:action => :show, :id => aggregator.id})
