--- a/app/views/backend/postal_zones/edit.html.haml
+++ b/app/views/backend/postal_zones/edit.html.haml
@@ -5,4 +5,4 @@
   .form-fields>= render('form', f: f)
   = form_actions do
     = submit_tag(tl(:update), 'data-disable-with' => tl(:please_wait))
-    = link_to(tl(:cancel), backend_areas_url, (params[:dialog] ? {:class => 'btn', 'data-close-dialog' => params[:dialog]} : {:class => 'btn'}))
+    = link_to(tl(:cancel), backend_postal_zones_url, (params[:dialog] ? {:class => 'btn', 'data-close-dialog' => params[:dialog]} : {:class => 'btn'}))
