fix and adapt CRUD on incident,prescrition and others.

--- a/app/views/backend/documents/show.html.haml
+++ b/app/views/backend/documents/show.html.haml
@@ -4,6 +4,7 @@
       = attributes_list do |l|
         - l.attribute :name
         - l.attribute :nature
+        - l.attribute :number
         - l.attribute :key
     - b.cell :archives do
       = list :archives
