--- a/app/views/backend/users/_form.html.haml
+++ b/app/views/backend/users/_form.html.haml
@@ -1,21 +1,21 @@
-=field_set do
-  =f.input :last_name
-  =f.input :first_name
-  =f.input :language, :choices => :languages
+= field_set do
+  = f.input :last_name
+  = f.input :first_name
+  = f.input :language, :choices => :languages
   -# =f.input :user_name
-  =f.input :password
-  =f.input :password_confirmation
-  =f.input :administrator, :hide => :rights
-  =f.input :employed, :show => :employee
+  = f.input :password
+  = f.input :password_confirmation
+  = f.input :administrator, :hide => :rights
+  = f.input :employed, :show => :employee
 
-=field_set(:employee) do
-  =f.input :employment
+= field_set(:employee) do
+  = f.input :employment
   -# association :profession
-  =f.referenced_association :department
-  =f.referenced_association :establishment
+  = f.referenced_association :team
+  = f.referenced_association :establishment
 
-=field_set(:rights) do
-  =f.referenced_association :role
+-# = field_set(:rights) do
+  = f.referenced_association :role
   -# input :reduction_percent
   -# input :free_price
   -# input :credits
