--- a/app/views/backend/financial_assets/_form.html.haml
+++ b/app/views/backend/financial_assets/_form.html.haml
@@ -3,16 +3,15 @@
   = f.input :description, as: :text
 
 = field_set(:depreciation) do
-  = f.input :depreciable_amount
-  = f.input :currency, choices: currencies
+  = f.money :depreciable_amount
   = f.input :depreciation_method, as: :radio_buttons
   = f.input :started_on
 
-  -# = field_set(:simplified_linear_options) do |f|
-    - f.input :depreciation_percentage
+  = field_set(:simplified_linear_options) do
+    = f.input :depreciation_percentage
 
-  -# = field_set(:linear_options) do |f|
-    - f.input :stopped_on
+  = field_set(:linear_options) do
+    = f.input :stopped_on
 
 = field_set(:accountancy) do
   = f.referenced_association :journal
