--- a/app/views/backend/cells/last_milk_result_cells/show.html.haml
+++ b/app/views/backend/cells/last_milk_result_cells/show.html.haml
@@ -1,17 +1,9 @@
-- if @campaign
+- if @started_on and @stopped_on
   :ruby
-    #
-    # We have the two last campaign ex: (2012, 2013) for comparing results
-    #
-    year = @campaign.harvest_year.to_f
-    year = Date.today.year if year.zero?
-    started_on = Date.new(year, 01, 01)
-    stopped_on = Date.new(year, 12, 31)
-
     series = []
     categories = {}
-    date = started_on
-    while date < stopped_on
+    date = @started_on
+    while date < @stopped_on
       categories[date.year.to_s + date.month.to_s.rjust(3, '0')] = date.l(:format => "%b %Y")
       date = date >> 1
     end
@@ -21,7 +13,7 @@
     #
     bar_indicators = [:total_bacteria_concentration, :somatic_cell_concentration, :clostridial_spores_concentration].collect{|i| Nomen::Indicators[i] }
     for indicator in bar_indicators
-      items = ProductIndicatorDatum.where(indicator_name: indicator.name).between(started_on, stopped_on)
+      items = ProductIndicatorDatum.where(indicator_name: indicator.name).between(@started_on, @stopped_on)
       if items.any?
         item_h = items.averages_of_periods.sort.inject({}) do |hash, pair|
           hash[pair.expr.to_i.to_s] = pair.average.to_s.to_d
@@ -36,7 +28,7 @@
     #
     spline_indicators = [:fat_matters_concentration, :protein_matters_concentration, :urea_concentration].collect{|i| Nomen::Indicators[i] }
     for indicator in spline_indicators
-      items = ProductIndicatorDatum.where(indicator_name: indicator.name).between(started_on, stopped_on)
+      items = ProductIndicatorDatum.where(indicator_name: indicator.name).between(@started_on, @stopped_on)
       if items.any?
         item_h = items.averages_of_periods.sort.inject({}) do |hash, pair|
           hash[pair.expr.to_i.to_s] = pair.average.to_d
