--- a/app/views/backend/cells/collected_taxes_cells/show.html.haml
+++ b/app/views/backend/cells/collected_taxes_cells/show.html.haml
@@ -36,4 +36,4 @@
 
   = bar_chart(series,legend: { layout: 'vertical', align: 'bottom', vertical_align: 'bottom', border_width: 0 }, x_axis: { title: {text: :taxes.tl}, categories: categories.values}, y_axis: {title: {text: :values.tl}})
 - else
-  %strong= :no_data.tl
+  = no_data
