--- a/app/views/backend/cells/cropping_plan_on_cultivable_land_parcels_cells/show.html.haml
+++ b/app/views/backend/cells/cropping_plan_on_cultivable_land_parcels_cells/show.html.haml
@@ -27,4 +27,4 @@
 
   = pie_chart(series, tooltip: {point_format: '{point.y: 1.1f} Ha'}, title: @campaigns.name)
 - else
-  %strong= :no_data.tl
+  = no_data
