--- a/app/views/backend/cells/last_milk_result_cells/show.html.haml
+++ b/app/views/backend/cells/last_milk_result_cells/show.html.haml
@@ -44,4 +44,4 @@
 
   = column_chart(series, y_axis: {title: {text: :indicator_value.tl} , opposite: true}, x_axis: { categories: categories.values}, legend: {})
 - else
-  %strong= :no_data.tl
+  = no_data
