--- a/app/views/backend/cells/elapsed_interventions_times_by_activities_cells/show.html.haml
+++ b/app/views/backend/cells/elapsed_interventions_times_by_activities_cells/show.html.haml
@@ -4,6 +4,8 @@
     started_on = Operation.of_campaign(@campaign).reorder(:started_at).first.started_at.to_date
     stopped_on = Operation.of_campaign(@campaign).reorder(:started_at).last.stopped_at.to_date
 
+    unit = Nomen::Units[:hour]
+
     series = []
     categories = {}
     date = started_on
@@ -16,11 +18,11 @@
     Activity.of_campaign(@campaign).find_each do |activity|
       operations = Operation.of_activities(activity).of_campaign(@campaign).order(:started_at)
       if operations.any?
-        sums = operations.sums_of_periods.sort.inject({}) do |hash, pair|
-          hash[pair.expr.to_i.to_s] = pair.sum.in_second.convert(:hour).round(2).to_s.to_f
+        sums = operations.sums_of_periods.sort.inject({}) do |hash, period|
+          hash[period.expr.to_i.to_s] = period.sum.to_i.in_second.in(unit).round(2).to_f
           hash
         end
-        series << { name: activity.name, data: normalize_serie(sums, categories.keys)}
+        series << { name: activity.name, data: normalize_serie(sums, categories.keys), tooltip: {value_suffix: unit.symbol }}
       end
     end
 
@@ -46,6 +48,6 @@
     #series << {type: 'pie', name: :total.tl, data: data, center: [50, 50], size: 100, show_in_legend: false, data_labels: { enabled: false }}
 
 
-  = column_chart(series, y_axis: {title: {text: :duration.tl}, stack_labels: {enabled: true}}, x_axis: { categories: categories.values}, legend: {}, plot_options: { column: {stacking: 'normal'}})
+  = column_chart(series, y_axis: {title: {text: :duration.tl}, stack_labels: {enabled: true, format: "{total} #{unit.symbol}"}, labels: { format: "{value} #{unit.symbol}" }}, x_axis: { categories: categories.values}, legend: {}, plot_options: { column: {stacking: 'normal'}})
 - else
-  %strong= :no_data.tl
+  = no_data
