--- a/app/views/backend/cells/map_cells/show.html.haml
+++ b/app/views/backend/cells/map_cells/show.html.haml
@@ -5,4 +5,4 @@
     %iframe{width: '100%', height: 520, frameborder: 0, src: "http://#{@account}.cartodb.com/viz/#{@visualization}/embed_map?title=false&description=false&search=false&shareable=false&cartodb_logo=false&layer_selector=false&legends=true&scrollwheel=false&sublayer_options=1"}
     = link_to(:refresh.tl, {action: :update, visualization: params[:visualization]}, method: :patch, remote: true, 'data-update' => "##{id}", 'data-update-at' => 'replace', class: "btn")
 - else
-  = :no_data.tl
+  = no_data
