--- a/app/views/backend/cells/revenues_by_product_nature_cells/show.html.haml
+++ b/app/views/backend/cells/revenues_by_product_nature_cells/show.html.haml
@@ -44,4 +44,4 @@
 
   = column_chart(series, y_axis: {title: {text: :pretax_amount.tl}}, x_axis: { categories: categories.values}, legend: {})
 - else
-  %strong= :no_data.tl
+  = no_data
