--- a/app/views/backend/mineral_matters/show.html.haml
+++ b/app/views/backend/mineral_matters/show.html.haml
@@ -30,7 +30,7 @@
 
         = spline_chart(series, legend: { layout: 'vertical', align: 'bottom', vertical_align: 'bottom', border_width: 0 }, y_axis: {title: { text: :indicator.tl}, min: 0}, x_axis: {type: 'datetime', title: { enabled: true, text: :months.tl}})
       - else
-        %strong= :no_data.tl
+        = no_data
     - b.cell(tl(:x_indicators, :count => @mineral_matter.indicator_data.count)) do
       = list(:indicators)
     - b.cell(:place) do
