--- a/app/themes/tekyla/stylesheets/active-list.css.scss
+++ b/app/themes/tekyla/stylesheets/active-list.css.scss
@@ -4,7 +4,7 @@
 
 $sort-mask: rgba(0, 18, 132, 0.05);
 
-$list-line-backgrounds:   ("&" rgba(#FFF, 1)) ("&.error, &.undone" rgba($invalid-color, 0.12)) ("&.warning, &.waiting" rgba($caution-color, 0.12)) ("&.in_progress" rgba($success-color, 0.12));
+$list-line-backgrounds:   ("&" rgba(#FFF, 1)) ("&.error, &.undone" rgba($invalid-color, 0.12)) ("&.warning, &.waiting" rgba($caution-color, 0.12)) ("&.in_progress, &.success" rgba($success-color, 0.12));
 $list-column-backgrounds: ("&" rgba(#FFF, 0)) ("&.act" rgba($link-color, 0.04)) ("&.sor" $sort-mask);
 $list-hover-backgrounds:  ("&" rgba(#FFF, 0)) ("&:hover" $hover-mask);
 
