--- a/app/views/backend/incoming_payment_modes/_form.html.haml
+++ b/app/views/backend/incoming_payment_modes/_form.html.haml
@@ -9,8 +9,9 @@
   = f.input :with_commission, :show => :commission
 
 = field_set(:deposit, :in => :accountancy_options) do
-  = f.referenced_association :depositables_account, source: :deposit_pending_payments, new: {number: Account.find_or_create_in_chart(:pending_deposit_payments).number}
+  = f.referenced_association :depositables_account, source: {scope: {of_usage: :pending_deposit_payments}}, new: {number: Account.find_or_create_in_chart(:pending_deposit_payments).number}
   = f.referenced_association :depositables_journal
+  = f.input :detail_payments
 
 = field_set(:commission, :in => :accountancy_options) do
   = f.input :commission_base_amount
