--- a/app/views/backend/cells/elapsed_interventions_times_by_activities_cells/show.html.haml
+++ b/app/views/backend/cells/elapsed_interventions_times_by_activities_cells/show.html.haml
@@ -1,6 +1,5 @@
 - if @campaign and Operation.of_campaign(@campaign).any?
   :ruby
-    #
     started_on = Operation.of_campaign(@campaign).reorder(:started_at).first.started_at.to_date
     stopped_on = Operation.of_campaign(@campaign).reorder(:started_at).last.stopped_at.to_date
 
@@ -8,9 +7,11 @@
 
     series = []
     categories = {}
+
     date = started_on
+    stopped_on = started_on + 1 if started_on >= stopped_on
     while date < stopped_on
-      categories[date.year.to_s + date.month.to_s.rjust(3, '0')] = date.l(:format => "%b %Y")
+      categories[date.year.to_s + date.month.to_s.rjust(3, '0')] = date.l(format: "%b %Y")
       date = date >> 1
     end
 
