--- a/app/views/backend/product_localizations/_form.html.haml
+++ b/app/views/backend/product_localizations/_form.html.haml
@@ -1,10 +1,7 @@
-=field_set do
-  =f.association :container
-  =f.association :product
-  =f.input :nature
-
-=field_set(:movement) do
-  =f.nested_association(:memberships) do
-    =f.input :started_at
-    =f.input :stopped_at
-    =f.association :product
+= field_set do
+  = f.input :nature, as: :radio_buttons
+  = f.association :product
+  = f.input :arrival_cause
+  = f.input :started_at
+  = f.input :departure_cause
+  = f.association :container
