--- a/app/views/backend/land_parcel_groups/show.html.haml
+++ b/app/views/backend/land_parcel_groups/show.html.haml
@@ -7,8 +7,8 @@
       .picture
         =@land_parcel_group.shape_svg(:width => 180, :height => 180, :class => :map)
       .info
-        %span.title=LandParcelGroup.human_attribute_name(:area_measure)
-        %span.value=@land_parcel_group.shape_area.in_square_meter.convert(:hectare).round(2)
+        %span.title=LandParcelGroup.human_attribute_name(:net_surface_area)
+        %span.value=@land_parcel_group.net_surface_area.in_hectare.round(2).l
 
 =beehive do |b|
   -b.cell do
