--- a/app/views/backend/purchases/show.html.haml
+++ b/app/views/backend/purchases/show.html.haml
@@ -1,20 +1,20 @@
-=purchase_steps if params[:step]
+= purchase_steps if params[:step]
 
-=main_toolbar do |t|
-  -t.export :purchase, @purchase
-  -t.edit @purchase if @purchase.draft?
-  -if @purchase.can_confirm?
-    -t.confirm @purchase, :method=>:post, "data-confirm" => tc(:are_you_sure_you_want_to_confirm)
-  -if @purchase.can_invoice?
-    -t.invoice @purchase, :method=>:post, "data-confirm" => tc(:are_you_sure_you_want_to_invoice)
-  -for event in [:propose, :correct, :refuse]
-    -t.send(event, @purchase, :method=>:post, "data-confirm" => tc(:are_you_sure)) if @purchase.send("can_#{event}?")
-  -t.abort(@purchase, :method=>:post, "data-confirm" => tc(:are_you_sure)) if @purchase.can_abort?
+= main_toolbar do |t|
+  - t.export :purchase, @purchase
+  - t.edit @purchase if @purchase.draft?
+  - if @purchase.can_confirm?
+    - t.confirm @purchase, :method=>:post, "data-confirm" => tc(:are_you_sure_you_want_to_confirm)
+  - if @purchase.can_invoice?
+    - t.invoice @purchase, :method=>:post, "data-confirm" => tc(:are_you_sure_you_want_to_invoice)
+  - for event in [:propose, :correct, :refuse]
+    - t.send(event, @purchase, :method=>:post, "data-confirm" => tc(:are_you_sure)) if @purchase.send("can_#{event}?")
+  - t.abort(@purchase, :method=>:post, "data-confirm" => tc(:are_you_sure)) if @purchase.can_abort?
 
-=beehive do |b|
+= beehive do |b|
 
-  -b.tabbox do
-    -b.cell do
+  - b.tabbox do
+    - b.cell do
       = attributes_list do |l|
         - l.attribute :supplier, :label=>:label, url: true
         - l.attribute :number
@@ -29,27 +29,27 @@
         - l.attribute :delivery_address, :label=>:coordinate
         - l.attribute :journal_entry, url: true
 
-  -if ["products", "summary", ""].include? params[:step].to_s
-    -b.cell Purchase.human_attribute_name("items") do
-      -if @purchase.draft?
-        =toolbar do |t|
-          -t.new(:params => {:controller=>:purchase_items, :purchase_id=>@purchase.id})
-      =list :items do
+  - if ["products", "summary", ""].include? params[:step].to_s
+    - b.cell Purchase.human_attribute_name("items") do
+      - if @purchase.draft?
+        = toolbar do |t|
+          - t.new(:params => {:controller=>:purchase_items, :purchase_id=>@purchase.id})
+      = list :items do
         %tr.total
           %th{:colspan=>6}
-          %td=I18n.localize(@purchase.pretax_amount, :currency=>@purchase.currency)
-          %td=I18n.localize(@purchase.amount, :currency=>@purchase.currency)
+          %td= @purchase.pretax_amount.l(currency: @purchase.currency)
+          %td= @purchase.amount.l(currency: @purchase.currency)
           %th{:colspan=>3}
 
-  -if ["products", "summary", ""].include? params[:step].to_s
-    -b.cell tc(:affair) do
-      =affair_of(@purchase)
+  - if ["products", "summary", ""].include? params[:step].to_s
+    - b.cell tc(:affair) do
+      = affair_of(@purchase)
 
-  -if ["deliveries", ""].include? params[:step].to_s
-    -if @purchase.deliverable?
-      -b.cell tc(:undelivered) do
-        =toolbar do |t|
-          -t.new(:params =>{:controller=>:incoming_deliveries, :purchase=>@purchase.id})
-        =list :undelivered_items
-    -b.cell Purchase.human_attribute_name("deliveries") do
-      =list :deliveries
+  - if ["deliveries", ""].include? params[:step].to_s
+    -# if @purchase.deliverable?
+      - b.cell tc(:undelivered) do
+        = toolbar do |t|
+          - t.new(:params =>{:controller=>:incoming_deliveries, :purchase=>@purchase.id})
+        = list :undelivered_items
+    - b.cell Purchase.human_attribute_name("deliveries") do
+      = list :deliveries
