--- a/app/views/backend/interventions/index.html.haml
+++ b/app/views/backend/interventions/index.html.haml
@@ -1,8 +1,8 @@
-= kujaku do |k|
-  - k.text
-  - k.check_boxes :done, :undone, name: :state
-  - k.check_boxes :recommended, :provisional,  name: :nature
-  - k.radio_buttons :all, :previous, :current, :next, name: :mode
+-# kujaku do |k|
+  -# k.text
+  -# k.check_boxes :done, :undone, name: :state
+  -# k.check_boxes :recommended, :provisional,  name: :nature
+  -# k.radio_buttons :all, :previous, :current, :next, name: :mode
 
 = main_toolbar do |t|
   - t.new
