--- a/app/views/backend/cells/calendar_cells/_month.html.haml
+++ b/app/views/backend/cells/calendar_cells/_month.html.haml
@@ -1,2 +1,2 @@
 = calendar @interventions, :start_day => :monday do |intervention|
-  = link_to intervention.reference.human_name, backend_intervention_url(intervention), class: "intervention #{intervention.state}"
+  = link_to intervention.name, backend_intervention_url(intervention), class: "intervention #{intervention.state}", title: intervention.casting
