Reorganizes entities#show

--- a/app/themes/tekyla/stylesheets/beehive.css.scss
+++ b/app/themes/tekyla/stylesheets/beehive.css.scss
@@ -96,7 +96,7 @@
                   .cell-content {
                     border: $cell-border;
                     border-top: none;
-                    min-height: 20em;
+                    // min-height: 20em;
 
                     // overflow: auto;
   .rss-feed {
