--- a/app/views/backend/incidents/show.html.haml
+++ b/app/views/backend/incidents/show.html.haml
@@ -1,5 +1,12 @@
 = main_toolbar do |t|
   - t.edit @incident
+  - if @incident.can_solve?
+    - t.solve @incident, :method => :post, "data-confirm" => tc(:are_you_sure_you_want_to_solve_incident)
+  - if @incident.can_drop?
+    - t.drop @incident, :method => :post, "data-confirm" => tc(:are_you_sure_you_want_to_drop_incident)
+  - if @incident.can_reopen?
+    - t.reopen @incident, :method => :post, "data-confirm" => tc(:are_you_sure_you_want_to_reopen_incident)
+  - t.destroy(@incident, :method=>:delete, "data-confirm" => tg(:are_you_sure_you_want_to_delete)) if @incident.destroyable?
 
 = beehive do |b|
   - b.hbox do
@@ -7,6 +14,7 @@
       = attributes_list do |l|
         - l.attribute :name
         - l.attribute :target, url: true
+        - l.attribute :description
     - if @incident.picture.exists?
       - b.cell do
         .picture= image_tag(@incident.picture.url(:identity))
