--- a/app/views/backend/calculators/nitrogen_inputs/_zones.html.haml
+++ b/app/views/backend/calculators/nitrogen_inputs/_zones.html.haml
@@ -2,12 +2,13 @@
   %thead
     %th= ProductionSupport.human_attribute_name(:activity)
     %th= ProductionSupport.human_attribute_name(:campaign)
-    %th= ProductionSupport.human_attribute_name(:storage)
+    %th= LandParcel.model_name.human
     %th= ProductionSupport.human_attribute_name(:net_surface_area)
     %th= Production.human_attribute_name(:variant)
-    %th
-    %th
     %th= :method.tl
+    %th= ProductionSupport.human_attribute_name(:yield)
+    %th= ProductionSupport.human_attribute_name(:soil_nature)
+    %th= ProductionSupport.human_attribute_name(:nitrogen_input)
   %tbody
     - for support in @campaign.production_supports
       - zone = support.storage
@@ -19,7 +20,11 @@
           %td= support.campaign.name
           %td= land_parcel.name
           %td.dec= membership.net_surface_area.in(:hectare).round(3).l
-          %td= support.production.variant.name
-          %td= text_field_tag(:goal)
-          %td= Nomen::Varieties[land_parcel.variety].human_name
-          %td= select_tag(:method, options_for_select(Nomen::NmpMethods.all))
+          %td= Nomen::Varieties[support.production.variant.variety].human_name
+          %td= select_tag(:method, options_for_select(Nomen::NmpMethods.selection))
+          %td
+            %span.input-append
+              = text_field_tag(:yield, 90, size: 4)
+              %span.add-on= Nomen::Units[:quintal_per_hectare].symbol
+          %td= select_tag(:variety, options_for_select(Nomen::Varieties.selection(:land_parcel), land_parcel.variety))
+          %td.dec= 0.0.in(:unity_per_hectare).l
