Renames Incident to Issue and cleans it

--- a/app/views/backend/dashboards/tools.html.haml
+++ b/app/views/backend/dashboards/tools.html.haml
@@ -34,6 +34,6 @@
                         %i.lock
                     %p= item[:description]
   - b.hbox do
-    - b.cell :last_incidents
+    - b.cell :last_issues
     - b.cell :last_document_archives
 
