--- a/app/views/backend/animals/show.html.haml
+++ b/app/views/backend/animals/show.html.haml
@@ -1,7 +1,7 @@
 = main_toolbar do |t|
   - t.export do |e|
     - e.animal_sheet @animal.identification_number, @animal
-  - t.new(:params =>{:controller => :incidents, :target_id => @animal.id, :target_type => @animal.class.name})
+  - t.new(:params =>{:controller => :issues, :target_id => @animal.id, :target_type => @animal.class.name})
   - t.edit @animal
   - t.destroy(@animal, :method=>:delete, "data-confirm" => tg(:are_you_sure_you_want_to_delete)) if @animal.destroyable?
 
@@ -127,10 +127,10 @@
       = list(:groups)
 
   - b.tabbox do
-    - b.cell(:incidents) do
+    - b.cell(:issues) do
       = toolbar do |t|
-        - t.new(:params =>{:controller => :incidents, :target_id => @animal.id, :target_type => @animal.class.name})
-      = list(:incidents)
+        - t.new(:params =>{:controller => :issues, :target_id => @animal.id, :target_type => @animal.class.name})
+      = list(:issues)
     - b.cell(tl(:x_intervention_casts, :count => @animal.intervention_casts.count)) do
       = toolbar do |t|
         - t.new(:params =>{:controller => :interventions, :target_id => @animal.id})
