--- a/app/views/backend/interventions/show.html.haml
+++ b/app/views/backend/interventions/show.html.haml
@@ -16,8 +16,8 @@
           - l.attribute :storage, url: true
         - if @intervention.prescription
           - l.attribute :prescription, label_method: :name, url: true
-        - if @intervention.incident
-          - l.attribute :incident, url: true
+        - if @intervention.issue
+          - l.attribute :issue, url: true
 
   - b.tabbox do
     - b.cell(:casts) do
