Configures Travis-CI

--- a/app/views/production/operations.html.haml
+++ b/app/views/production/operations.html.haml
@@ -1,5 +1,5 @@
 =toolbar do
-  -link :shape_operation_create
-=dyta :shape_operations
+  -link :operation_create
+=dyta :operations
 
-=#puts @current_company.shape_operations.find_by_id(7).tools.first.id.inspect
+=#puts @current_company.operations.find_by_id(7).tools.first.id.inspect
