--- a/app/views/backend/issues/show.html.haml
+++ b/app/views/backend/issues/show.html.haml
@@ -1,7 +1,7 @@
 = main_toolbar do |t|
   - t.edit @issue
   - for event in @issue.state_paths.events
-    - if @issue.send("can_#{state}?")
+    - if @issue.send("can_#{event}?")
       - t.send(event, @issue, :method => :post, "data-confirm" => are_you_sure_you_want_to("#{event}_issue"))
   - t.destroy(@issue, :method => :delete, "data-confirm" => tg(:are_you_sure_you_want_to_delete)) if @issue.destroyable?
 
