add some status in sales and purchases lists

--- a/app/views/backend/dashboards/trade.html.haml
+++ b/app/views/backend/dashboards/trade.html.haml
@@ -1,3 +1,6 @@
 = beehive(:trade) do
   - hbox do
     - cell :revenues_by_product_nature
+  - hbox do
+    - cell :last_sales
+    - cell :last_purchases
