--- a/app/views/backend/affairs/select.html.haml
+++ b/app/views/backend/affairs/select.html.haml
@@ -1,13 +1,13 @@
-=form_tag(:action => :attach) do |f|
-  -if params[:redirect]
-    =hidden_field_tag(:redirect, params[:redirect])
-  =hidden_field_tag(:deal_type, @deal_class.name.underscore)
+= form_tag(:action => :attach) do |f|
+  - if params[:redirect]
+    = hidden_field_tag(:redirect, params[:redirect])
+  = hidden_field_tag(:deal_type, @deal_class.name.underscore)
   .form-fields
-    =field_set :attach_deal do
+    = field_set :attach_deal do
       .control-group
-        %label.control-label=@deal_class.model_name.human
+        %label.control-label= @deal_class.model_name.human
         .controls
           .input-append
-            =text_field_tag(:deal_id, nil, 'data-selector' => url_for(:controller => @deals, :action => :unroll), 'data-selector-new-item' => url_for(:controller => @deals, :action => :new, @third_column => @third.id, :amount => @affair.balance.abs))
-  =form_actions do
-    =submit_tag(:attach_deal.tl, 'data-disable-with' => tl(:please_wait))
+            = text_field_tag(:deal_id, nil, 'data-selector' => url_for(controller: @deals, action: :unroll, scope: :affairable), 'data-selector-new-item' => url_for(controller: @deals, action: :new, @third_column => @third.id, amount: @affair.balance.abs))
+  = form_actions do
+    = submit_tag(:attach_deal.tl, 'data-disable-with' => tl(:please_wait))
